exp GLU and master_node

--- a/config/mediapipe.yml
+++ b/config/mediapipe.yml
@@ -1,14 +1,14 @@
 description: ""
-name_exp : "dlib"
+name_exp : "mediapipe"
 dataset : "PartA"
 parent_folder: "/andromeda/shared/reco-pomigliano/tempo-gnn/tgcn/"
 folder_data_path: "data/PartA/"
-video_path: "data/PartA/video"
+video_path: "data/PartA/video/"
 landmarks_path : "data/PartA/mediapipe/"
 landmarks_npy: "data/PartA/mediapipe/landmarksnpy/"
 csv_file: "data/PartA/samples.csv"
 labels_path: "data/PartA/lables.npy"
-data_path: "data/PartA/processed_data/dataset_mediapipe.npy" 
+data_path: "data/PartA/mediapipe/dataset_mediapipe.npy" 
 edges_path: "data/PartA/edges_mediapipe.npy"
 filter_idx_90: "data/PartA/idx_low_confidance_90.npy"
 filter_idx_80: "data/PartA/idx_low_confidance_80.npy"
@@ -31,7 +31,7 @@ pretrain_model: "None" #"08-05-17:36" # #"08-03-12:18" #Name of folder that cont
 Temporal_downsampling: False
 model_name: "aagcn" # "a3tgcn" # # #
 embed_dim: 128
-gru: 2
+gru: 1
 bn: True
 lr: 0.01
 
@@ -40,7 +40,7 @@ num_features: 6
 hidden_size: 1
 N_sample: 8700
 TS: 137
-n_joints: 51 #468
+n_joints: 478 #468
 idx_train:  "data/PartA/idx_train_filterd_low_react.npy" #  #"data/PartA/idx_train_filterd.npy"
 idx_test:  "data/PartA/idx_test_filterd_low_react.npy" # #"data/PartA/idx_test_filterd.npy"
 LOG_DIR: "log/PartA"
@@ -48,7 +48,7 @@ t_kernel_size: 15
 strid: 1
 normalize_labels: False
 
-adaptive: True
+adaptive: False
 attention: True
 drop_out: 0.2
 protocol: "hold_out" #"hold_out" #"loso"  
@@ -57,11 +57,11 @@ maxMinNormalization: True #False #True
 center_loss: False
 augmentaion: False #True #False #  # True
 prop: #1 # 1 #usando la classe di augmentation.
-Aug_type: #"all" #"all" #"r+f" #"all" # #"r+f" #"f" # [ "r" , "f" , "r+f","all"] None
+Aug_type: None #"all" #"all" #"r+f" #"all" # #"r+f" #"f" # [ "r" , "f" , "r+f","all"] None
 concatenate: False # True #True #True # # # True
 project_name: "pain_estimation"
-log_name: "hold_out_multi_symmetric_adaptive" #"1s+15k+multi+loso-filtred_LE_test0" minMaxNorm_dx_dy_
-gpu: 1
+log_name: "hold_out_mediapipe_test" #"1s+15k+multi+loso-filtred_LE_test0" minMaxNorm_dx_dy_
+gpu: 0
 num_classes: 5
 num_epoch: 100
 
