--- a/config/open_face.yml
+++ b/config/open_face.yml
@@ -60,9 +60,9 @@ prop: #1 # 1 #usando la classe di augmentation.
 Aug_type: None #"all" #"all" #"r+f" #"all" # #"r+f" #"f" # [ "r" , "f" , "r+f","all"] None
 concatenate: False # True #True #True # # # True
 project_name: "pain_estimation_Jul"
-log_name: "hold_out_multi_test3" 
-gpu: 1
+log_name: "hold_out_multi_test4_a" 
+gpu: 0
 num_classes: 5
-num_epoch: 150
+num_epoch: 200
 
 eval_loso: False
