--- a/config/open_face.yml
+++ b/config/open_face.yml
@@ -54,15 +54,14 @@ drop_out: 0.2
 protocol: "hold_out" #"hold_out" #"loso"  
 maxMinNormalization: True #False #True
 
-center_loss: True
+center_loss: False
 augmentaion: False #True #False #  # True
 prop: #1 # 1 #usando la classe di augmentation.
 Aug_type: None #"all" #"all" #"r+f" #"all" # #"r+f" #"f" # [ "r" , "f" , "r+f","all"] None
 concatenate: False # True #True #True # # # True
 project_name: "pain_estimation_Jul"
-log_name: "hold_out_multi_test4_a" 
+log_name: "multi_custom_round" 
 gpu: 0
-num_classes: 5
-num_epoch: 200
-
+num_classes: 2
+num_epoch: 300
 eval_loso: False
