--- a/config/open_face_AB.yml
+++ b/config/open_face_AB.yml
@@ -24,7 +24,7 @@ filter_idx_80: ""
 
 weight_decay: 0.7
 momentum: 0.9
-step_decay: 30
+step_decay: 10
 L2: 0.0001
 optimizer_name: 'SGD'
 
@@ -45,7 +45,7 @@ N_sample: 17300
 TS: 137
 n_joints: 51
 idx_train:  "data/AB/train_ab.npy" #  #"data/PartA/idx_train_filterd.npy"
-idx_test:  "data/AB/test_b.npy" # #"data/PartA/idx_test_filterd.npy"
+idx_test:  "data/AB/test_a.npy" # #"data/PartA/idx_test_filterd.npy"
 LOG_DIR: "log/AB"
 t_kernel_size: 15
 strid: 1
@@ -63,8 +63,8 @@ prop: #1 # 1 #usando la classe di augmentation.
 Aug_type: None #"all" #"all" #"r+f" #"all" # #"r+f" #"f" # [ "r" , "f" , "r+f","all"] None
 concatenate: False # True #True #True # # # True
 project_name: "pain_estimation_Jul"
-log_name: "hold_out_binary_AB_testB" 
-gpu: 0
+log_name: "binary_AB_testA_stepD_10" 
+gpu: 1
 num_classes: 2
 num_epoch: 200
 
