--- a/config/open_face_downsample.yml
+++ b/config/open_face_downsample.yml
@@ -5,10 +5,10 @@ parent_folder: "/andromeda/shared/reco-pomigliano/tempo-gnn/tgcn/"
 folder_data_path: "data/PartA/"
 video_path: "data/PartA/video"
 landmarks_path : "data/PartA/3dlandmarks/"
-landmarks_npy: "data/PartA/landmarksnpy/"
+landmarks_npy: "data/PartA/3dlandmarks/"
 csv_file: "data/PartA/samples.csv"
 labels_path: "data/PartA/lables.npy"
-data_path: "data/PartA/processed_data/dataset_openFace.npy" 
+data_path: "data/PartA/processed_data/dataset_openFace_temporal_downsample.npy" 
 edges_path: "data/PartA/edges.npy"
 filter_idx_90: "data/PartA/idx_low_confidance_90.npy"
 filter_idx_80: "data/PartA/idx_low_confidance_80.npy"
@@ -21,7 +21,7 @@ filter_idx_80: "data/PartA/idx_low_confidance_80.npy"
 
 weight_decay: 0.7
 momentum: 0.9
-step_decay: 30
+step_decay: 10
 L2: 0.0001
 optimizer_name: 'SGD'
 
@@ -39,7 +39,7 @@ num_subset: 2
 num_features: 6
 hidden_size: 1
 N_sample: 8700
-TS: 137
+TS: 69
 n_joints: 51
 idx_train:  "data/PartA/idx_train_filterd_low_react.npy" #  #"data/PartA/idx_train_filterd.npy"
 idx_test:  "data/PartA/idx_test_filterd_low_react.npy" # #"data/PartA/idx_test_filterd.npy"
@@ -48,7 +48,7 @@ t_kernel_size: 15
 strid: 1
 normalize_labels: False
 
-adaptive: True
+adaptive: False
 attention: True
 drop_out: 0.2
 protocol: "hold_out" #"hold_out" #"loso"  
@@ -60,9 +60,9 @@ prop: #1 # 1 #usando la classe di augmentation.
 Aug_type: #"all" #"all" #"r+f" #"all" # #"r+f" #"f" # [ "r" , "f" , "r+f","all"] None
 concatenate: False # True #True #True # # # True
 project_name: "pain_estimation"
-log_name: "hold_out_multi_symmetric_adaptive" #"1s+15k+multi+loso-filtred_LE_test0" minMaxNorm_dx_dy_
-gpu: 1
+log_name: "multi_tDown_2" #"1s+15k+multi+loso-filtred_LE_test0" minMaxNorm_dx_dy_
+gpu: 0
 num_classes: 5
-num_epoch: 100
+num_epoch: 150
 
 eval_loso: False
