--- a/config/open_face.yml
+++ b/config/open_face.yml
@@ -9,7 +9,7 @@ landmarks_npy: "data/PartA/landmarksnpy/"
 csv_file: "data/PartA/samples.csv"
 labels_path: "data/PartA/lables.npy"
 data_path: "data/PartA/processed_data/dataset_openFace.npy" 
-LBP_data: "data/PartA/processed_data/lbp_features_40.npy"
+LBP_data: False #"data/PartA/processed_data/lbp_features_40.npy"
 edges_path: "data/PartA/edges.npy" #_masternode #/andromeda/shared/reco-pomigliano/tempo-gnn/tgcn/data/PartA/edges_masternode.npy #edges
 filter_idx_90: "data/PartA/idx_low_confidance_90.npy"
 filter_idx_80: "data/PartA/idx_low_confidance_80.npy"
@@ -56,12 +56,12 @@ protocol: "hold_out" #"hold_out" #"loso"
 maxMinNormalization: True #False #True
 
 center_loss: False
-augmentaion: True #True #False #  # True
-prop: #1 # 1 #usando la classe di augmentation.
-Aug_type: "r+f" #"all" #"all" #"r+f" #"all" # #"r+f" #"f" # [ "r" , "f" , "r+f","all"] None
+augmentaion: False #True #False #  # True
+prop: #0.5 #1 # 1 #usando la classe di augmentation.
+Aug_type: #"r+f" #"all" #"all" #"r+f" #"all" # #"r+f" #"f" # [ "r" , "f" , "r+f","all"] None
 concatenate: False # True #True #True # # # True
 project_name: "pain_estimation_Jul"
-log_name: "multi_aug" 
+log_name: "multi_weighted_A" 
 gpu: 0
 num_classes: 5
 num_epoch: 300
