--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,18 @@ process_data/fl.png
 process_data/combined_image.jpg
 process_data/comb_1.jpg
 process_data/temp_plot.png
+process_data/channel_attention_binary.npy
+process_data/channel_attention.npy
+process_data/M_attention_matrix.npy
+process_data/spatial_attention_binary_soft_max.npy
+process_data/spatial_attention_binary.npy
+process_data/spatial_attention_multi_soft_max.npy
+process_data/spatial_attention.npy
+process_data/temporal_attention_binary.npy
+process_data/temporal_attention.npy
+process_data/visualize_attention.py
+models/aagcn_1.py
+process_data/vgg_data.py
+debug.txt
+process_data/analisi_dati.py
+process_data/attention_matrix_M.npy
